--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2219,7 +2219,63 @@ input, select, textarea {
 				}
 
 			}
+.video {
+		border: 0;
+		display: inline-block;
+		position: relative;
+	}
 
+		.video video {
+			display: block;
+		}
+
+		.video.left, .video.right {
+			max-width: 30%;
+		}
+
+			.video.left video, .video.right video {
+				width: 100%;
+			}
+
+		.video.left {
+			float: left;
+			margin: 0 1.5em 1.25em 0;
+			top: 0.25em;
+		}
+
+		.video.right {
+			float: right;
+			margin: 0 0 1.25em 1.5em;
+			top: 0.25em;
+		}
+
+		.video.fit {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.video.fit img {
+				width: 100%;
+			}
+
+		.video.main {
+			display: block;
+			margin: 2.5em 0;
+			width: 100%;
+		}
+
+			.video.main img {
+				width: 100%;
+			}
+
+			@media screen and (max-width: 736px) {
+
+				.video.main {
+					margin: 1.5em 0;
+				}
+
+			}
 /* List */
 
 	ol {
